# vcd2fst

./: CMakeLists.txt  Makefile  README.md  fstapi.c  fstapi.h  vcd2fst.c  vcd2fst.cpp  wave_locale.h
.github/workflows/: release.yml
